--- a/jekyll-uno/_includes/header.html
+++ b/jekyll-uno/_includes/header.html
@@ -21,6 +21,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="/uploads/2017/Chris Heald - Resume.pdf" title="My Résumé" class="blog-button">Résumé</a></li>
             </ul>
           </nav>
 
